--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
         "array": "cpp",
         "initializer_list": "cpp",
         "utility": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "limits": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Chromium, IndentWidth: 4}"
