--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) 启动",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
-            "program": "",
+            "name": "Launch",
+            "program": "${workspaceFolder}/*",
             "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "E:\\Programs\\MinGW\\bin\\gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "为 gdb 启用整齐打印",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
