--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,14 +3,15 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "C/C++: g++.exe 生成活动文件",
-			"command": "E:\\Programs\\MinGW\\bin\\g++.exe",
+			"label": "C/C++: clang++ 生成活动文件",
+			"command": "/usr/bin/clang++",
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
 				"${file}",
+				"-std=c++17",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}/../build/${fileBasenameNoExtension}"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -22,7 +23,7 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "编译器: E:\\Programs\\MinGW\\bin\\g++.exe"
+			"detail": "编译器: /usr/bin/clang++"
 		}
 	]
 }
